# wisconsin-dor-polished

./: .gitignore  .prettierignore  README.md  bundles.toml  bunfig.toml  eslint.config.ts  package.json  pyproject.toml  tsconfig.json
application/next_app/: package.json
baml_src/: clients.baml  generators.baml  rag_response.baml
config/: model_configs.toml
documents/: document_descs.json  faqs.json
infra/: cdk.json
infra/lib/: stack.ts
pdf_chunking/: aws_utils.py  flowchart_tools.py  pdfChunker.py  table_tools.py
scripts/: README.md  bundle.py  docker_script.sh  get_script.sh  ingest_FAQ.py  ingest_chunks.py  ingest_documents.py  install_ubuntu_noble_24_04.sh  requirements.txt  scrape_FAQ.py  stream_logs.sh  sync_destination.py  sync_source.py  upload_model_configs.py
