[project]
name = "wisconsin-bot"
version = "0.1.0"
description = "A chatbot for the Wisconsin Department of Revenue"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.pyrefly]
python-platform = "darwin"
python-interpreter = ".venv/bin/python"
search-path = [
  "packages/shared/lambda_layers/",
  "packages/shared/lambda_layers/websocket_utils/",
  "packages/sessions/lambdas/websocket/",
]
replace-imports-with-any = [
  "packages/shared/lambda_layers/websocket_utils",
  "packages/sessions/lambdas/websocket",
  "packages/shared/lambda_layers",
]


[tool.pyrefly.errors]
bad-assignment = true     # Ensure variable assignments match their annotated types
bad-argument-count = true # Catch calls with incorrect argument counts
bad-argument-type = true  # Catch calls with incorrect argument types
missing-argument = true   # Catch required arguments missing in calls

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
chat-api = [
  "aws-lambda-powertools>=3.18.0",
  "boto3>=1.40.2",
  "pydantic>=2.11.7",
  "pydantic-core>=2.33.2",
]
step-function-types = ["pydantic>=2.11.7"]
dev = ["pytest>=8.4.1", "pytest-asyncio>=1.1.0"]
websocket = ["pydantic>=2.11.7"]
websocket-utils = ["pydantic>=2.11.7"]
classifier = [
    "pydantic>=2.11.7",
]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]
